# tb3-distributed-consensus-formation

./: .gitignore
devel/: .catkin  local_setup.fish  setup.fish  setup.sh
devel/include/tb3_distributed_control/: LeaderHistoryData.h  RobotHistoryData.h
devel/lib/pkgconfig/: tb3_distributed_control.pc  turtlebot3_rl_real.pc
devel/lib/tb3_distributed_control/: leader_node.py  print_notification.py  rviz_visualizer.py  tb3_controller_node.py
src/: README.md
src/tb3_distributed_control/docs/: blind_zone_merge_mechanism.md
src/tb3_distributed_control/launch/: distributed_host_side_nav_location.launch  (+8 more)
src/tb3_distributed_location/: CMakeLists.txt  README.md  package.xml
仿真&实物实验实验数据论文结果图绘制包/: README.md  paper_graph_plot.py  paper_vedio_plot.py  parse_robot_odometry.py
仿真&实物实验实验数据论文结果图绘制包/8字形一致性编队仿真及避障实验数据/: consensus_data_2025-12-22-16-29-49.pkl  consensus_data_2026-03-30-14-55-38.pkl  my_data.kpl
仿真&实物实验实验数据论文结果图绘制包/output_odometry/: leader_data.csv  robot_0_odometry.csv  robot_1_odometry.csv  robot_2_odometry.csv  robot_3_odometry.csv  robot_4_odometry.csv
单主机+多从机分布式MPC一致编队及避障控制项目实物部署方案/: README.md  详细版README.md
单主机+多从机分布式MPC一致编队及避障控制项目实物部署方案/机器人端功能包/src/tb3_distributed_control/: CMakeLists.txt  README.md  package.xml
单主机+多从机分布式MPC一致编队及避障控制项目实物部署方案/机器人端功能包/src/tb3_distributed_control/launch/: distributed_robot_side.launch
单主机+多从机分布式MPC一致编队及避障控制项目实物部署方案/机器人端功能包/src/tb3_distributed_control/scripts/: print_notification.py  robot_return_home.py  robot_rotate_90.py  robot_start.sh  robot_stop.sh  tb3_controller_node_real.py
(+88 files in other folders)
